examples/bad/TypeMismatch.ml
(* This will fail because of x + bool is invalid *)
let fn x = x+true in fn